--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -35,6 +35,7 @@
         </div>
     </div>
 </div>
+<div th:insert="fragments/pagination_users.html"></div>
 <div th:replace="fragments/footer.html"></div>
 </body>
 </html>
