--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -37,6 +37,8 @@
         </div>
     </div>
 </div>
+<div th:insert="fragments/pagination.html"></div>
+
 <div th:replace="fragments/footer.html"></div>
 </body>
 </html>
