--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,6 +6,7 @@
         <a class="navbar-brand" th:href="@{/registration}">ADD CLIENT</a>
         <a class="navbar-brand" th:href="@{/books}">BOOKS</a>
         <a class="navbar-brand" th:href="@{/add}">ADD BOOK</a>
+        <a class="navbar-brand" th:href="@{/debtors}">DEBTORS</a>
     </nav>
 </div>
 
